# aiogram_crypto_bot

./: .env.dist  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: bot.py  cmc_api_client.py  config.py  currency.py  handling.py  main.py  menu.py
